planning and UV

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 <div class="card-grid">
                     <a href="viewer.html" class="nav-card nav-card-primary">
                         <h3>Manuscript Viewer</h3>
-                        <p>View digitized manuscripts with the IIIF Mirador viewer. Zoom, pan, and explore high-resolution images.</p>
+                        <p>View digitized manuscripts with the Universal Viewer. Zoom, pan, and explore high-resolution images.</p>
                     </a>
                 </div>
             </section>
